# egnhackaton

./: .gitignore  README.md  embeddings.pckl  pyproject.toml  streamlitapp.py
egnhackaton/: chatengine.py  example.json  text_processing.py  utils.py
hackathon_data/queens_speeches/embeddings_data/: datafile.json
